# iinfer

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  vp4onnx.server.json
.licenses/: files.txt
cmdbox/licenses/: files.txt
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  robots.txt  search.html  searchindex.js  sitemap.xml
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/docs/: cmd_client.doctree  cmd_common.doctree  cmd_gui.doctree  cmd_install.doctree  cmd_postprocess.doctree  cmd_redis.doctree  cmd_server.doctree  cmd_web.doctree  command.doctree  customize.doctree  detection.doctree  developer.doctree  errors.doctree  face.doctree  gui.doctree  injections.doctree  install.doctree  license.doctree  models.doctree  overview.doctree  pipeline.doctree  segmentation.doctree  web.doctree
docs/.doctrees/resources/: iinfer.app.doctree  iinfer.app.predicts.doctree  iinfer.docker.doctree  iinfer.doctree  iinfer.tools.doctree  index.doctree
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/_sources/docs/: cmd_client.rst.txt  cmd_common.rst.txt  cmd_gui.rst.txt  cmd_install.rst.txt  cmd_postprocess.rst.txt  cmd_redis.rst.txt  cmd_server.rst.txt  cmd_web.rst.txt  command.rst.txt  detection.rst.txt  developer.rst.txt  errors.rst.txt  face.rst.txt  gui.rst.txt  injections.rst.txt  install.rst.txt  license.rst.txt  models.rst.txt  overview.rst.txt  pipeline.rst.txt  segmentation.rst.txt  web.rst.txt
docs/_sources/resources/: iinfer.app.predicts.rst.txt  iinfer.app.rst.txt  iinfer.rst.txt  iinfer.tools.rst.txt  index.rst.txt
docs/_static/: documentation_options.js  orverview.drawio
docs/docs/: cmd_client.html  cmd_common.html  cmd_gui.html  cmd_install.html  cmd_postprocess.html  cmd_redis.html  cmd_server.html  cmd_web.html  command.html  customize.html  detection.html  developer.html  errors.html  face.html  gui.html  injections.html  install.html  license.html  models.html  overview.html  pipeline.html  segmentation.html  web.html
docs/pages/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
docs/pages/.doctrees/: environment.pickle  index.doctree
docs/pages/_modules/: index.html
docs/pages/_sources/: index.rst.txt
docs/pages/_static/: documentation_options.js
docs/pages/docs/: cmd_client.html  cmd_common.html  cmd_install.html  cmd_postprocess.html  cmd_redis.html  cmd_server.html  command.html  customize.html  developer.html  errors.html  license.html  models.html  overview.html
docs/pages/resources/: iinfer.app.html  iinfer.app.predicts.html  iinfer.docker.html  iinfer.html  modules.html
docs/resources/: iinfer.app.html  iinfer.app.predicts.html  iinfer.docker.html  iinfer.html  iinfer.tools.html  index.html
docs/source/: conf.py
docs/source/docs/: developer.rst  license.rst  overview.rst
docs/source/resources/: modules.rst
docs_src/: conf.py  index.rst
docs_src/_templates/: layout.html
docs_src/docs/: cmd_client.rst  cmd_common.rst  cmd_install.rst  cmd_postprocess.rst  cmd_redis.rst  cmd_server.rst  cmd_web.rst  command.rst  customize.rst  detection.rst  developer.rst  errors.rst  face.rst  gui.rst  injections.rst  install.rst  license.rst  models.rst  overview.rst  segmentation.rst  web.rst
docs_src/resources/: conf.py  iinfer.app.predicts.rst  iinfer.app.rst  iinfer.docker.rst  iinfer.rst  index.rst
docs_src/static/: custom.css  orverview.drawio
iinfer/: __init__.py  __main__.py  autoload.py  config.yml  logconf.yml  logconf_client.yml  logconf_gui.yml  logconf_iinfer.yml  logconf_install.yml  logconf_postprocess.yml  logconf_redis.yml  logconf_server.yml  logconf_web.yml  version.py
iinfer/app/: __init__.py  app.py  client.py  common.py  feature.py  filer.py  gui.py  injection.py  install.py  options.py  postprocess.py  predict.py  redis.py  server.py  showimg.py  train.py  web.py
iinfer/app/commons/: convert.py  module.py  redis_client.py
iinfer/app/features/: iinfer_client_capture.py  iinfer_client_deploy.py  iinfer_client_deploy_list.py  iinfer_client_file_copy.py  iinfer_client_file_download.py  iinfer_client_file_list.py  iinfer_client_file_remove.py  iinfer_client_file_rmdir.py  iinfer_client_file_upload.py  iinfer_client_start.py  iinfer_client_stop.py  iinfer_client_train.py  iinfer_client_train_type_list.py  iinfer_gui_start.py  (+25 more)
iinfer/docker/: Dockerfile  build.sh  docker-compose.yml
iinfer/extensions/: features.yml  label_cityscapes.txt  user_list.txt  user_list.yml
iinfer/licenses/: LICENSE.torch.2.1.2(BSD License).txt  LICENSE.torch.2.2.0(BSD License).txt  LICENSE_chunklet-py_2_2_0_MIT.txt  LICENSE_cmdbox_0_7_8_MIT_License.txt  LICENSE_py3langid_0_3_0_BSD_License.txt  LICENSE_pydocket_0_16_1_MIT_License.txt  LICENSE_python-toon_0_1_3_MIT.txt  LICENSE_torch_2_10_0_BSD-3-Clause.txt  files.txt
iinfer/scripts/: iinfer.bat  iinfer.sh
iinfer/tools/: gentest.py
iinfer/web/: annotation.html  assets_license_list.txt  filer.html  gui.html  main.html  showimg.html  signin.html  webcap.html
models/: swin-tiny_16xb64_in1k.py  yolox_nano.onnx
models/mmseg/: pspnet_r50-d8_4xb2-80k_cityscapes-512x1024.py  san-vit-b16_coco-stuff164k-640x640.py  swin-tiny-patch4-window7-in1k-pre_upernet_8xb2-160k_ade20k-512x512.py
tests/: output_010201_client_predict.json  output_010301_postprocess_det_filter.json
tests/app/: test_01_common.py  test_02_redis.py  test_03_server.py  test_06_app.py
tests/genapp/: test_client.py  test_install.py  test_server.py  test_web.py
vp4onnx/: __init__.py  __main__.py  config.yml  logconf.yml  version.py
vp4onnx/app/: app.py  capture.py  client.py  common.py  redis.py  redis_client.py  redis_server.py  server.py  setting.py
vp4onnx/scripts/: vp4onnx.bat  vp4onnx.sh
vp4onnx/web/: boot.html
(+296 files in other folders)
