[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iinfer"
dynamic = ["version"] 
description = "iinfer: An application that executes AI model files in onnx or mmlab format."
readme = "README.md"
authors = [
    { name = "hamacom2004jp", email = "hamacom2004jp@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "mmdetection",
    "mmsegmentation",
    "onnxruntime",
    "inference",
    "image",
    "ai",
    "model",
    "cmdbox",
    "audit",
    "cli",
    "excel",
    "fastapi",
    "mcp",
    "redis",
    "restapi",
    "web",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
    "Topic :: Utilities"
]
dependencies = [
    'cmdbox>=0.7.5,<0.7.6',
    'motpy',
    'opencv-python',
    'urllib3',
]

[project.optional-dependencies]
agent_mcp = [
    "pydantic>=2.0.0,<3.0.0",
    "fastmcp>=2.14.4",
    "mcp>=1.23.0,<2.0.0",
]
agent_adk = [
    "google-adk>=1.23.0",
    "a2a-sdk>=0.3.4,<0.4.0",
    "litellm>=1.75.5,<1.80.17",
]
agent_mem = [
    "sentence-transformers",
    "sqlite_vec",
    "transformers>=4.48.0",
    "torch",
]
rag = [
    "chunklet-py[document]",
    "langchain_community",
    "markdown",
    "pdfplumber",
]
omni = [
    "accelerate>=1.12.0",
    "qwen-omni-utils>=0.0.9",
    "torchvision>=0.25.0",
]
saml = [
    "python3-saml",
    "xmlsec==1.3.13",
]
all = ["cmdbox[agent_mcp,agent_adk,agent_mem,rag,omni,saml]"]
dev = [
    "build",
    "collectlicense",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx_fontawesome",
    "sphinx-intl",
    "sphinx-sitemap",
    "twine",
    "wheel",
]

[project.urls]
Homepage = "https://github.com/hamacom2004jp/iinfer"
Documentation = "https://hamacom2004jp.github.io/iinfer/index.html"
Repository = "https://github.com/hamacom2004jp/iinfer"

[project.scripts]
iinfer = "iinfer.app.app:main"

# ----------------------------------------------------------------------
# setuptools固有の設定 (setup.cfgに相当する内容をsetuptoolsテーブルで記述)
# ----------------------------------------------------------------------

[tool.setuptools]
packages = [
    'iinfer',
    'iinfer.app',
    'iinfer.app.commons',
    'iinfer.app.features.cli',
    'iinfer.app.features.web',
    'iinfer.app.injections',
    'iinfer.app.postprocesses',
    'iinfer.app.predicts',
    'iinfer.app.trains',
    'iinfer.extensions'
]

[tool.setuptools.package-data]
# setup()のpackage_dataとexclude_package_dataに相当
iinfer = [
    "*.yml",
    "extensions/**",
    "extensions/sample_project/.vscode/**",
    "licenses/*",
    "tools/datas/**",
    "web/**",
    "!extensions/data/*.json",
    "!extensions/data/*/*.jpg",
    "!extensions/data/*/*.svg",
]

[tool.setuptools.exclude-package-data]
cmdbox = [
    "extensions/data/*.json",
    "extensions/data/*/*.jpg",
    "extensions/data/*/*.svg",
]
